--- a/src/scss/abstract/_variables.scss
+++ b/src/scss/abstract/_variables.scss
@@ -35,8 +35,8 @@
 
     --red-l:#FF3B30;
     --red-d:#FF3B30;
-    --overly-l:rgba(0, 0, 0, 0.3);
-    --overly-d:rgba(0, 0, 0, 0.7);
+    --overly-l:rgba(0, 0, 0, 0.4);
+    --overly-d:rgba(0, 0, 0, 0.9);
 
     // Gradients
     // --gradiantGreenToBlue: linear-gradient(254.81deg, #1A50FF 8.13%, #1EE9B6 92.46%);
