--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -18,7 +18,7 @@
     background-color: var(--bg-secondary);
     width: 90%;
     max-width: 500px;
-    padding: 8px;
+    padding: 16px;
     border-radius: 9px;
     z-index: 1000;
     & .header-container {
@@ -32,7 +32,6 @@
     & .main-container {
       @extend %flex-center-center;
         flex-direction: column;
-        padding: 0 8px 8px 8px;
 
       & .icon {
       @extend %flex-center-center;
